force-app/main/default/objects/Enterprise_Goal__c/Enterprise_Goal__c.object-meta.xml
<CustomObject>
    <label>Enterprise Goal</label>
    <nameField>
        <displayFormat>Goal-{00000}</displayFormat>
        <label>Goal System #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enterprise Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>