force-app/main/default/objects/Enterprise_Goal__c/fields/Actual_Percent_Completed__c.field-meta.xml
<CustomField>
    <fullName>Actual_Percent_Completed__c</fullName>
    <formula>Count_of_Completed__c / (Count_of_At_Risk__c + Count_of_Completed__c + Count_of_Discuss__c + Count_of_Not_Started__c + Count_of_On_Track__c)</formula>
    <label>Actual Percent Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>