force-app/main/default/objects/Enterprise_Goal__c/fields/Count_of_Discuss__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Discuss__c</fullName>
    <label>Count of Discuss</label>
    <summaryFilterItems>
        <field>Enterprise_Progress__c.Actual_Status__c</field>
        <operation>equals</operation>
        <value>Discuss</value>
    </summaryFilterItems>
    <summaryForeignKey>Enterprise_Progress__c.Enterprise_Goal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>