force-app/main/default/objects/Enterprise_Goal__c/fields/Count_of_Implementation_Steps__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Implementation_Steps__c</fullName>
    <formula>Count_of_At_Risk__c + Count_of_Completed__c + Count_of_Discuss__c + Count_of_Not_Started__c + Count_of_On_Track__c</formula>
    <label>Count of Implementation Steps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>