force-app/main/default/objects/Enterprise_Goal__c/fields/Executive_Team_Focus__c.field-meta.xml
<CustomField>
    <fullName>Executive_Team_Focus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executive Team Focus</label>
    <type>Checkbox</type>
</CustomField>