force-app/main/default/objects/Enterprise_Goal__c/fields/First_Target_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Target_Completion_Date__c</fullName>
    <label>First Target Completion Date</label>
    <summarizedField>Enterprise_Progress__c.Target_Completion_Date__c</summarizedField>
    <summaryForeignKey>Enterprise_Progress__c.Enterprise_Goal__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>