force-app/main/default/objects/Enterprise_Goal__c/fields/Goal_Name__c.field-meta.xml
<CustomField>
    <fullName>Goal_Name__c</fullName>
    <label>Goal Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>