force-app/main/default/objects/Enterprise_Goal__c/fields/Goal_Name_with_Parent__c.field-meta.xml
<CustomField>
    <fullName>Goal_Name_with_Parent__c</fullName>
    <formula>Parent_Enterprise_Goal__r.Goal_Name__c &amp; &quot;, &quot; &amp; text(Goal_Sequence__c) &amp; &quot; - &quot; &amp;Goal_Name__c</formula>
    <label>Goal Name with Parent</label>
    <type>Text</type>
</CustomField>