force-app/main/default/objects/Enterprise_Goal__c/fields/Goal_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Goal_Sequence__c</fullName>
    <label>Goal Sequence</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>