force-app/main/default/objects/Enterprise_Goal__c/fields/Implementation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Plan__c</fullName>
    <formula>if (RecordTypeId = &quot;01231000000xzpz&quot;, NULL, 

hyperlink(&quot;https://na56.salesforce.com/00O0Z000006ozYu?pv0=&quot;&amp;Name, &quot;Drill Down&quot;))</formula>
    <label>Implementation Plan</label>
    <type>Text</type>
</CustomField>