force-app/main/default/objects/Enterprise_Goal__c/fields/Incentive_Plan_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Plan_Maximum__c</fullName>
    <label>Incentive Plan Maximum</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>