force-app/main/default/objects/Enterprise_Goal__c/fields/Last_Target_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Target_Completion_Date__c</fullName>
    <label>Last Target Completion Date</label>
    <summarizedField>Enterprise_Progress__c.Target_Completion_Date__c</summarizedField>
    <summaryForeignKey>Enterprise_Progress__c.Enterprise_Goal__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>