force-app/main/default/objects/Enterprise_Goal__c/fields/Parent_Enterprise_Goal__c.field-meta.xml
<CustomField>
    <fullName>Parent_Enterprise_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Enterprise Goal</label>
    <referenceTo>Enterprise_Goal__c</referenceTo>
    <relationshipLabel>Enterprise Goals</relationshipLabel>
    <relationshipName>Enterprise_Goals</relationshipName>
    <type>Lookup</type>
</CustomField>