force-app/main/default/objects/Enterprise_Goal__c/fields/Parent_Enterprise_Goal_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Enterprise_Goal_Name__c</fullName>
    <formula>Parent_Enterprise_Goal__r.Goal_Name__c</formula>
    <label>Parent Enterprise Goal Name</label>
    <type>Text</type>
</CustomField>