force-app/main/default/objects/Enterprise_Goal__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FY18</fullName>
            </value>
            <value>
                <fullName>FY19</fullName>
            </value>
            <value>
                <fullName>FY20</fullName>
            </value>
            <value>
                <fullName>FY18-FY20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>