force-app/main/default/objects/Enterprise_Goal__c/fields/Year_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Year_Sequence__c</fullName>
    <formula>text (Year__c) &amp; &quot; - &quot; &amp; text (Goal_Sequence__c)</formula>
    <label>Year &amp; Sequence</label>
    <type>Text</type>
</CustomField>