force-app/main/default/objects/Enterprise_Goal__c/recordTypes/Strategic_Plan_Goal.recordType-meta.xml
<RecordType>
    <fullName>Strategic_Plan_Goal</fullName>
    <active>true</active>
    <label>Strategic Plan Goal</label>
</RecordType>