force-app/main/default/objects/Enterprise_Goal__c/recordTypes/Strategic_Plan_Objective.recordType-meta.xml
<RecordType>
    <fullName>Strategic_Plan_Objective</fullName>
    <active>true</active>
    <label>Strategic Plan Objective</label>
</RecordType>