force-app/main/default/objects/Enterprise_Goal__c/listViews/Strat_Plan_FY18_FY20_Goal_2_Business.listView-meta.xml
<ListView>
    <fullName>Strat_Plan_FY18_FY20_Goal_2_Business</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Parent_Enterprise_Goal_Name__c</columns>
    <columns>Year_Sequence__c</columns>
    <columns>Goal_Name__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Enterprise_Goal__c.Strategic_Plan_Objective</value>
    </filters>
    <filters>
        <field>Parent_Enterprise_Goal_Name__c</field>
        <operation>contains</operation>
        <value>Goal 2</value>
    </filters>
    <label>Strat Plan FY18-FY20, Goal 2: Business</label>
    <language>en_US</language>
</ListView>