force-app/main/default/objects/Enterprise_Goal__c/listViews/Strat_Plan_FY18_FY20_Goals.listView-meta.xml
<ListView>
    <fullName>Strat_Plan_FY18_FY20_Goals</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Goal_Sequence__c</columns>
    <columns>Goal_Name__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Enterprise_Goal__c.Strategic_Plan_Goal</value>
    </filters>
    <label>Strat Plan FY18-FY20 Goals</label>
    <language>en_US</language>
</ListView>